--- a/style.css
+++ b/style.css
@@ -77,6 +77,43 @@ nav ul li a:hover {
     color: var(--primary-color);
 } */
 
+/* Reduce gap between Login and Sign Up navbar items */
+nav ul li a#login-link,
+nav ul li a#signup-link {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+nav ul li a#signup-link {
+    margin-left: -1.5rem;
+    /* Decrease this value for less gap, e.g. -0.5rem for almost no gap */
+}
+
+nav ul li a#login-link,
+nav ul li a#signup-link {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0.35rem 1rem;
+    border-radius: 12px;
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    background: #fff;
+    font-weight: 500;
+    transition: background 0.2s, color 0.2s;
+}
+
+nav ul li a#signup-link {
+    margin-left: -1.5rem;
+    /* Simple, minimal gap */
+}
+
+nav ul li a#login-link:hover,
+nav ul li a#signup-link:hover {
+    background: var(--primary-color);
+    color: #fff;
+}
+
+
 .cart-icon {
     position: relative;
     font-size: 1.5rem;
@@ -883,5 +920,28 @@ footer {
 
     .cart {
         max-width: 100%;
+    }
+}
+
+@media (max-width: 960px) and (min-width: 769px) {
+    nav ul {
+        flex-wrap: nowrap;
+    }
+
+    nav ul li {
+        margin-left: 0.5rem;
+        /* Even less gap between all navbar items */
+    }
+
+    nav ul li a#login-link,
+    nav ul li a#signup-link {
+        padding: 0.25rem 0.6rem;
+        font-size: 0.92rem;
+        min-width: 60px;
+    }
+
+    nav ul li a#signup-link {
+        margin-left: 0.1rem;
+        /* Minimal gap */
     }
 }
